fixed z-index so links are clickable on projects

--- a/style/partials/_nav.scss
+++ b/style/partials/_nav.scss
@@ -42,6 +42,7 @@ header {
         flex-direction: column;
         background-color: black;
         opacity: 0.86;
+        z-index: 1;
     }
     a {
         @include font-settings($secondary-font-color, $primary-font-family);
