--- a/style/partials/_projects.scss
+++ b/style/partials/_projects.scss
@@ -9,7 +9,6 @@
     position: relative;
     margin: 0 auto;
     flex-direction: row;
-    z-index: -1;
     img {
         border-bottom: 1px dashed white;
         }
