--- a/style/style.css
+++ b/style/style.css
@@ -54,6 +54,7 @@ header .border {
           flex-direction: column;
   background-color: black;
   opacity: 0.86;
+  z-index: 1;
 }
 
 header a {
@@ -593,7 +594,6 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    z-index: -1;
   }
   .project_list img {
     border-bottom: 1px dashed white;
